<resources>
    <string name="app_name">Good Action</string>
    <string name="welcome_to_good_action">Welcome to Goodaction</string>
    <string name="welcome_message">A social community that allows givers to meet the needs of people around them.</string>
    <string name="get_started">Get Started</string>
    <string name="log_in">Log in</string>
    <string name="or">Or</string>
    <string name="explore">Explore</string>
    <string name="getting_started">Getting Started</string>
    <string name="confirm_details">Confirm details</string>
    <string name="create_an_account_to_continue">Create an account to continue</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="conditions_and_privacy_text"><![CDATA[I agree to Goodaction’s Terms & Conditions & Privacy policy]]></string>
    <string name="have_an_account">Have an account? Log in</string>
    <string name="create_account">Create account</string>
    <string name="verification_method">Verification Method</string>
    <string name="how_to_verify_account">How do you want to verify your account?</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="code_expires_in">Code expires in</string>
    <string name="expiry_countdown">%d seconds</string>
    <string name="didnt_get_code">Didn\'t get code? Resend OTP</string>
    <string name="new_email">You\'ve got new email</string>
    <string name="email_sent_to">We\'ve sent an email to</string>
    <string name="check_email">Check my email</string>
    <string name="otp_sent_to_number">An OTP was sent to the phone number you submitted</string>
    <string name="welcome">Welcome</string>
    <string name="login_to_account">Login to your account</string>
    <string name="or_login_with">Or login with</string>

    <!--Facebook details-->
    <string name="facebook_app_id">4141042546011623</string>
    <string name="fb_login_protocol_scheme">fb4141042546011623</string>
    <string name="forgotten_password"><u>Forgot Password?</u></string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_to_goodaction">New to Goodaction? <u>Create account</u></string>
    <string name="medium_to_recover_password">Select a medium to recover your password</string>
    <string name="enter_the_detail">Enter the %s associated with your account</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_new_password">Please enter a new password</string>
    <string name="complete">Complete</string>
    <string name="password_reset_successful">Password Reset Successful</string>
    <string name="you_reset_your_password">You have successfully reset your password.</string>
    <string name="continue_text">Continue</string>

</resources>