<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".95" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_reset_password"
        style="@style/GoodActionText.Large.Extra"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/good_action_large_margin"
        android:text="@string/reset_password"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline_one"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_enter_new_password"
        style="@style/GoodActionText"
        android:layout_marginTop="@dimen/good_action_normal_margin"
        android:text="@string/enter_new_password"
        android:textColor="@color/text_gray"
        app:layout_constraintStart_toStartOf="@+id/guideline_one"
        app:layout_constraintTop_toBottomOf="@+id/tv_reset_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_password"
        style="@style/GoodActionInput.Password"
        android:layout_marginTop="@dimen/good_action_large_margin"
        app:layout_constraintBottom_toTopOf="@+id/il_confirm_password"
        app:layout_constraintEnd_toStartOf="@+id/guideline_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_one"
        app:layout_constraintTop_toBottomOf="@+id/tv_enter_new_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPersonName|textCapWords"
            tools:text="123456" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_confirm_password"
        style="@style/GoodActionInput.Password"
        android:layout_marginTop="@dimen/good_action_big_margin"
        app:layout_constraintEnd_toStartOf="@+id/guideline_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_one"
        app:layout_constraintTop_toBottomOf="@+id/il_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/confirm_password"
            android:inputType="textPersonName|textCapWords"
            tools:text="123456" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_complete"
        style="@style/GoodActionButton"
        android:layout_marginTop="@dimen/good_action_large_margin"
        android:text="@string/complete"
        app:backgroundTint="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/guideline_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_one"
        app:layout_constraintTop_toBottomOf="@+id/il_confirm_password" />

</androidx.constraintlayout.widget.ConstraintLayout>