<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".95" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_getting_started"
        style="@style/GoodActionText.Large.Extra"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/good_action_large_margin"
        android:text="@string/getting_started"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline_one"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_create_account"
        style="@style/GoodActionText"
        android:layout_marginTop="@dimen/good_action_normal_margin"
        android:text="@string/create_an_account_to_continue"
        android:textColor="@color/text_gray"
        app:layout_constraintStart_toStartOf="@+id/guideline_one"
        app:layout_constraintTop_toBottomOf="@+id/tv_getting_started" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_facebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/good_action_normal_margin"
        android:layout_marginEnd="@dimen/good_action_big_margin"
        android:clickable="true"
        android:focusable="true"
        app:cardElevation="2dp"
        app:contentPaddingBottom="@dimen/good_action_normal_padding"
        app:contentPaddingLeft="@dimen/good_action_extra_large_padding"
        app:contentPaddingRight="@dimen/good_action_extra_large_padding"
        app:contentPaddingTop="@dimen/good_action_normal_padding"
        app:layout_constraintEnd_toStartOf="@+id/cv_google"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_one"
        app:layout_constraintTop_toBottomOf="@+id/tv_create_account"
        app:rippleColor="@android:color/darker_gray"
        app:strokeColor="@android:color/darker_gray"
        app:strokeWidth=".0001dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_facebook" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_google"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/good_action_big_margin"
        android:clickable="true"
        android:focusable="true"
        app:cardElevation="2dp"
        app:contentPaddingBottom="@dimen/good_action_normal_padding"
        app:contentPaddingLeft="@dimen/good_action_extra_large_padding"
        app:contentPaddingRight="@dimen/good_action_extra_large_padding"
        app:contentPaddingTop="@dimen/good_action_normal_padding"
        app:layout_constraintBottom_toBottomOf="@+id/cv_facebook"
        app:layout_constraintEnd_toStartOf="@+id/guideline_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cv_facebook"
        app:layout_constraintTop_toTopOf="@+id/cv_facebook"
        app:rippleColor="@android:color/darker_gray"
        app:strokeColor="@android:color/darker_gray"
        app:strokeWidth=".0001dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_google" />

    </com.google.android.material.card.MaterialCardView>

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#C4C4C4"
        app:layout_constraintBottom_toBottomOf="@id/tv_or"
        app:layout_constraintEnd_toStartOf="@+id/guideline_two"
        app:layout_constraintStart_toStartOf="@+id/guideline_one"
        app:layout_constraintTop_toTopOf="@id/tv_or" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_or"
        style="@style/GoodActionText"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/good_action_large_margin"
        android:background="@color/white"
        android:paddingStart="@dimen/good_action_extra_large_padding"
        android:paddingEnd="@dimen/good_action_extra_large_padding"
        android:text="@string/or"
        android:textSize="@dimen/good_action_large_text_size"
        app:layout_constraintEnd_toStartOf="@+id/guideline_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_one"
        app:layout_constraintTop_toBottomOf="@+id/cv_facebook" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_first_name"
        style="@style/GoodActionInput"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/il_email"
        app:layout_constraintEnd_toStartOf="@+id/il_last_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/guideline_one"
        app:layout_constraintTop_toBottomOf="@+id/tv_or"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/first_name"
            android:inputType="textPersonName|textCapWords"
            tools:text="Ayokunle" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_last_name"
        style="@style/GoodActionInput"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/il_email"
        app:layout_constraintEnd_toEndOf="@id/guideline_two"
        app:layout_constraintEnd_toStartOf="@+id/guideline_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/il_first_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_or"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/last_name"
            android:inputType="textPersonName|textCapWords"
            tools:text="Paul" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_email"
        style="@style/GoodActionInput"
        android:layout_marginTop="@dimen/good_action_big_margin"
        app:layout_constraintBottom_toTopOf="@+id/il_phone_number"
        app:layout_constraintEnd_toStartOf="@+id/guideline_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_one"
        app:layout_constraintTop_toBottomOf="@+id/il_first_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:text="ayokunle@goodaction.com" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_phone_number"
        style="@style/GoodActionInput"
        android:layout_marginTop="@dimen/good_action_big_margin"
        app:layout_constraintBottom_toTopOf="@+id/il_password"
        app:layout_constraintEnd_toStartOf="@+id/guideline_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_one"
        app:layout_constraintTop_toBottomOf="@+id/il_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone"
            android:inputType="textPersonName|textCapWords"
            tools:text="+2348100224466" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_password"
        style="@style/GoodActionInput.Password"
        android:layout_marginTop="@dimen/good_action_big_margin"
        app:layout_constraintBottom_toTopOf="@+id/il_confirm_password"
        app:layout_constraintEnd_toStartOf="@+id/guideline_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_one"
        app:layout_constraintTop_toBottomOf="@+id/il_phone_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPersonName|textCapWords"
            tools:text="123456" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_confirm_password"
        style="@style/GoodActionInput.Password"
        android:layout_marginTop="@dimen/good_action_big_margin"
        app:layout_constraintBottom_toTopOf="@+id/cb_terms_and_policy"
        app:layout_constraintEnd_toStartOf="@+id/guideline_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_one"
        app:layout_constraintTop_toBottomOf="@+id/il_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/confirm_password"
            android:inputType="textPersonName|textCapWords"
            tools:text="123456" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cb_terms_and_policy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/good_action_big_margin"
        android:text="@string/conditions_and_privacy_text"
        android:textColorHighlight="@android:color/transparent"
        android:textColorLink="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/btn_create_account"
        app:layout_constraintEnd_toEndOf="@id/guideline_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_one"
        app:layout_constraintTop_toBottomOf="@+id/il_confirm_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create_account"
        style="@style/GoodActionButton"
        android:layout_marginTop="@dimen/good_action_normal_margin"
        android:text="@string/create_account"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/materialButton"
        app:layout_constraintEnd_toStartOf="@+id/guideline_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_one"
        app:layout_constraintTop_toBottomOf="@+id/cb_terms_and_policy" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        style="?borderlessButtonStyle"
        android:layout_marginTop="@dimen/good_action_normal_margin"
        android:text="@string/have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_one"
        app:layout_constraintTop_toBottomOf="@+id/btn_create_account" />

</androidx.constraintlayout.widget.ConstraintLayout>