<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".95" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_forgot_password"
        style="@style/GoodActionText.Large.Extra"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/good_action_large_margin"
        android:text="@string/forgot_password"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline_one"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_login_to_account"
        style="@style/GoodActionText"
        android:layout_marginTop="@dimen/good_action_normal_margin"
        android:text="@string/medium_to_recover_password"
        android:textColor="@color/text_gray"
        app:layout_constraintStart_toStartOf="@+id/guideline_one"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />

    <View
        android:id="@+id/tab_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_login_tab_background"
        app:layout_constraintBottom_toBottomOf="@id/tb_sign_in_options"
        app:layout_constraintEnd_toEndOf="@id/guideline_two"
        app:layout_constraintStart_toStartOf="@id/guideline_one"
        app:layout_constraintTop_toTopOf="@id/tb_sign_in_options" />

    <View
        android:id="@+id/tab_indicator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/ic_login_tab_indicator"
        app:layout_constraintBottom_toBottomOf="@+id/tb_sign_in_options"
        app:layout_constraintStart_toStartOf="@+id/guideline_one"
        app:layout_constraintTop_toTopOf="@+id/tb_sign_in_options" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tb_sign_in_options"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/good_action_extra_large_margin"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_two"
        app:layout_constraintStart_toStartOf="@+id/guideline_one"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_to_account"
        app:tabIndicator="@null"
        app:tabRippleColor="@null"
        app:tabSelectedTextColor="@color/black"
        app:tabTextAppearance="@style/GoodActionText"
        app:tabTextColor="@color/black">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone" />

    </com.google.android.material.tabs.TabLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_enter_details"
        style="@style/GoodActionText"
        android:layout_marginTop="@dimen/good_action_large_margin"
        android:text="@string/enter_the_detail"
        android:textColor="@color/text_gray"
        app:layout_constraintStart_toStartOf="@+id/guideline_one"
        app:layout_constraintTop_toBottomOf="@+id/tab_background" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_email"
        style="@style/GoodActionInput"
        android:layout_marginTop="@dimen/good_action_large_margin"
        app:layout_constraintEnd_toStartOf="@+id/guideline_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_one"
        app:layout_constraintTop_toBottomOf="@+id/tv_enter_details">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:text="ayokunle@goodaction.com" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_phone_number"
        style="@style/GoodActionInput"
        android:layout_marginTop="@dimen/good_action_big_margin"
        app:layout_constraintEnd_toStartOf="@+id/guideline_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_one"
        app:layout_constraintTop_toBottomOf="@+id/il_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone"
            android:inputType="textPersonName|textCapWords"
            tools:text="+2348100224466" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue"
        style="@style/GoodActionButton"
        android:layout_marginTop="@dimen/good_action_extra_large_margin"
        android:text="@string/continue_text"
        app:backgroundTint="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/guideline_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_one"
        app:layout_constraintTop_toBottomOf="@+id/il_phone_number" />

</androidx.constraintlayout.widget.ConstraintLayout>