<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".95" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_new_email"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_password_reset"
        app:layout_constraintEnd_toStartOf="@+id/guideline_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_one"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_password_reset_successful" />

    <TextView
        android:id="@+id/tv_password_reset"
        style="@style/GoodActionText.Large"
        android:layout_marginTop="@dimen/good_action_large_margin"
        android:text="@string/password_reset_successful"
        app:layout_constraintBottom_toTopOf="@+id/tv_password_reset_successful"
        app:layout_constraintEnd_toStartOf="@+id/guideline_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_one"
        app:layout_constraintTop_toBottomOf="@+id/img_new_email" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_password_reset_successful"
        style="@style/GoodActionText"
        android:layout_marginTop="@dimen/good_action_large_margin"
        android:text="@string/you_reset_your_password"
        android:textColor="@color/text_gray"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toStartOf="@+id/guideline_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_one"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_reset" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/GoodActionButton"
        android:layout_marginTop="@dimen/good_action_extra_large_margin"
        android:text="@string/log_in"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_one"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_reset_successful" />

</androidx.constraintlayout.widget.ConstraintLayout>